--- a/angular/partials/home.html
+++ b/angular/partials/home.html
@@ -19,8 +19,8 @@
     <tbody>
       <tr ng-repeat="quote in quotes">
         <td>{{ quote.content }}</td>
-        <td align="center">{{ quote.created_at }}</td>
-        <td align="center">{{ quote.updated_at }}</td>
+        <td align="center">{{ quote.created_at | amDateFormat:'L' }}</td>
+        <td align="center">{{ quote.updated_at | amDateFormat:'L' }}</td>
         <td class="text-center settings">
           <a class="btn btn-info btn-xs" ui-sref="edit-quote({id: quote.id})">
             <span class="glyphicon glyphicon-edit"></span> Edit
